# GameBot

./: .gitignore  Cargo.toml  build.gradle.kts  gradle.properties  market.json  market.toml  readme.md  settings.gradle.kts
android/: .gitignore  build.gradle.kts  gradle.properties  readme.md  settings.gradle.kts
android/app/: build.gradle.kts  proguard-rules.pro
android/app/schemas/gamebot.host.domain.TaskDatabase/: 1.json
android/app/src/main/: AndroidManifest.xml
android/app/src/main/aidl/gamebot/host/: IGameKeeperShizukuService.aidl  ILocalRun.aidl  ILocalService.aidl  IRemoteService.aidl
android/app/src/main/java/gamebot/host/: ActivityInfo.kt  ComposeUI.kt  Download.kt  GameKeeperActivity.kt  Host.kt  LocalRun.kt  LocalService.kt  Log.kt  MainActivity.kt  MainUI.kt  Native.kt  Pair.kt  RemoteRun.kt  RemoteService.kt  RunnerInfo.kt  uiplay.kt
android/app/src/main/java/gamebot/host/debug/: DebugServer.kt
android/app/src/main/java/gamebot/host/domain/: Runner.kt  TaskDao.kt  TaskDatabase.kt  TaskDetail.kt  TaskRepository.kt  TaskStatus.kt
android/app/src/main/java/gamebot/host/loader/: GameKeeperShizukuService.kt  Git.kt  JsonStore.kt
android/app/src/main/java/gamebot/host/overlay/: MyLifecycleOwner.kt
android/app/src/main/java/gamebot/host/presentation/: CenterView.kt  NavigationView.kt  Screen.kt  StringView.kt  ThemeView.kt
android/app/src/main/rust/: Cargo.toml
android/app/src/main/rust/src/: asset.rs  lib.rs
android/gradle/: libs.versions.toml
android/gradle/wrapper/: gradle-wrapper.properties
android/hidden/src/main/aidl/android/app/: IUiAutomationConnection.aidl
android/hidden/src/main/aidl/android/app/accessibilityservice/: IAccessibilityServiceConnection.aidl
android/hidden/src/main/aidl/android/hardware/display/: IDisplayManager.aidl
android/hidden/src/main/aidl/android/hardware/input/: IInputManager.aidl
android/hidden/src/main/java/android/app/: UiAutomationConnection.java  UiAutomationHidden.java
android/hidden/src/main/java/android/hardware/display/: DisplayManagerGlobal.java  DisplayManagerHidden.java
android/hidden/src/main/java/android/os/: MemoryFileHidden.java  ServiceManager.java
android/hidden/src/main/java/android/view/: SurfaceControlHidden.java
android/hidden/src/main/java/android/view/accessibility/: AccessibilityInteractionClient.java
app/: build.gradle.kts  proguard-rules.pro
app/src/androidTest/java/bilabila/gamebot/host/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/bilabila/gamebot/host/: IGameKeeperShizukuService.aidl  ILocalRun.aidl  IRemoteRun.aidl
app/src/main/aidl/gamebot/host/: ILocalService.aidl  IRemoteRun.aidl  IRemoteService.aidl
app/src/main/java/bilabila/gamebot/host/: ConfigFile.kt  Container.kt  GameKeeperActivity.kt  GameKeeperApplication.kt  LocalRun.kt  MainActivity.kt  RemoteRun.kt  RunnerInfo.kt
app/src/main/java/bilabila/gamebot/host/debug/: DebugServer.kt
app/src/main/java/bilabila/gamebot/host/domain/: Extra.kt  ExtraDao.kt  ExtraRepository.kt  Runner.kt  RunnerRepository.kt  Task.kt  TaskDao.kt  TaskDatabase.kt  TaskDetail.kt  TaskRepository.kt  TaskStatus.kt
app/src/main/java/bilabila/gamebot/host/loader/: GameKeeperRootService.kt  GameKeeperShizukuService.kt  Git.kt  SaveLoadConfig.kt
app/src/main/java/bilabila/gamebot/host/presentation/: CenterView.kt  NavigationView.kt  Screen.kt  ShowErrorView.kt  StringView.kt  ThemeView.kt  ToUIString.kt
app/src/main/java/gamebot/host/: ComposeFloatingWindow.kt  ComposeUI.kt  ConfigFile.kt  Container.kt  GameKeeperActivity.kt  GameKeeperApplication.kt  LocalRun.kt  LocalService.kt  MainActivity.kt  Native.kt  Pair.kt  RemoteRun.kt  RemoteService.kt  TTT.kt  uiplay.kt
app/src/main/java/gamebot/host/domain/: Extra.kt  ExtraDao.kt  ExtraRepository.kt  RunnerRepository.kt  Task.kt
app/src/main/java/gamebot/host/domain/crontab/: CrontabInterval.kt  DayOfWeekWhiteList.kt  LocalDateSerializer.kt  LocalDateTimeSerializer.kt  Schedule.kt
app/src/main/java/gamebot/host/loader/: GameKeeperRootService.kt  Git.kt  PrefStore.kt  SaveLoadConfig.kt
app/src/main/java/gamebot/host/overlay/: OverlayService.kt
app/src/main/java/gamebot/host/presentation/: NavigationView.kt  ShowErrorView.kt  ThemeView.kt  ToUIString.kt
app/src/main/java/gamebot/host/presentation/component/: Content.kt  Section.kt  SectionSelect.kt  SectionSwitch.kt
app/src/main/java/gamebot/host/presentation/debug/: DebugScreen.kt  DebugState.kt
app/src/main/java/gamebot/host/presentation/detail/: ErrorRunner.kt  LoadingRunner.kt
app/src/main/java/gamebot/host/presentation/main/: MainScreen.kt  (+1 more)
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/rust/: Cargo.toml  build.rs  rustfmt.toml
app/src/main/rust/src/: find_trait.rs  lib.rs  mail.rs  node.rs  t.rs  t1.rs  t2.rs  ui.rs
app/src/rust/: Cargo.toml
app/src/rust/src/: lib.rs
app/src/test/java/bilabila/gamebot/host/: ExampleUnitTest.kt
devtool/: 0  0.sh  Cargo.toml  build.rs  readme.md
devtool/src/: burn_onnx.rs  candle_ddddocr.rs  candle_onnx.rs  lib.rs  ncnn_ddddocr.rs  ncnn_paddleocr.rs  ort_ddddocr.rs  ort_onnx.rs  ort_paddleocr.rs  tract_onnx.rs
devtool/src/model/: mod.rs
gallery/: 0  Cargo.toml
gallery/src/: find_image.rs  lib.rs
gamebot/: 0.sh  Cargo.toml
gamebot/src/: activity.rs  api.rs  asset.rs  color.rs  find.rs  find_trait.rs  lib.rs  mail.rs  node.rs  screenshot.rs  t1.rs  ui.rs
gamebot/src/api/: dbg.rs  entry.rs  proxy.rs  status.rs  store.rs
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hidden/: build.gradle.kts
hidden/src/main/aidl/android/view/: IWindowManager.aidl
hidden/src/main/java/android/app/: UiAutomationHidden.java
hidden/src/main/java/android/view/: SurfaceControlHidden.java
host/: 0  Cargo.toml  readme.md
host/src/: lib.rs
ncnn/: Cargo.toml
ncnn-sys/: Cargo.toml  build.rs
ncnn/src/: allocator.rs  datareader.rs  extractor.rs  lib.rs  mat.rs  net.rs  option.rs
ort/: Cargo.toml
ort-sys/: Cargo.toml  build.rs
ort-sys/src/: lib.rs
ort/src/: lib.rs
(+79 files in other folders)
