[workspace]
members = [
  "android/app/src/main/rust/",
  "devtool",
  "gamebot",
  "ncnn",
  "ncnn-sys",
  "ort",
  "ort-sys",
]
resolver = "2"

[workspace.dependencies]
gamebot = { path = "gamebot" }
ncnn = { path = "ncnn" }
ncnn-sys = { path = "ncnn-sys" }
ort = { path = "ort" }
ort-sys = { path = "ort-sys" }

[profile.release]
opt-level = "s"
# strip = true
# lto = true
# codegen-units = 1
