[workspace]
members = [
  "android/app/src/main/rust/",
  "devtool",
  "gamebot",
  "ncnn",
  "ncnn-sys",
  "ort",
  "ort-sys",
]
resolver = "2"

[workspace.dependencies]
gamebot = { path = "gamebot" }
ncnn = { path = "ncnn" }
ncnn-sys = { path = "ncnn-sys" }
ort = { path = "ort" }
ort-sys = { path = "ort-sys" }

android_logger = "0.14.1"
anyhow = "1.0.89"
axum = "0.7.6"
clap = { version = "4.5.18", features = ["derive"] }
image = "0.25.2"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive", "rc"] }
serde_json = "1.0.128"
tokio = { version = "1.40.0", features = ["full"] }
ndarray = "0.16.1"
jni = "0.21.1"
slotmap = { version = "1.0.7", features = ["serde"] }
typetag = "0.2.16"
log-panics = { version = "2" }
thiserror = "1.0.63"
linux-futex = "1.0.0"
libloading = "0.8.5"
bindgen = "0.70.1"
cached-path = { version = "0.6.1", git = "https://github.com/tkkcc/rust-cached-path" }
dirs = "5.0.1"
hex-literal = "0.4.1"
libc = "0.2.159"
tracing = "0.1.40"
git2 = { version = "0.19.0", default-features = false, features = [] }

[profile.dev]
opt-level = "s"

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
