[package]
name = "devtool"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.14.1"
anyhow = "1.0.89"
axum = "0.7.6"
clap = { version = "4.5.18", features = ["derive"] }
gamebot = { path = "../gamebot" }
image = "0.25.2"
log = "0.4.22"
serde = { version = "1.0.210", features = ["derive"] }
tokio = { version = "1.40.0", features = ["full"] }
tract-onnx = "0.21.7"
