[package]
name = "gallery"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
gamebot = { workspace = true }
anyhow = { workspace = true }
axum = { workspace = true }
image = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
ncnn = { workspace = true }
