[package]
name = "gamebot"
version = "0.1.0"
edition = "2021"

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
slotmap = { workspace = true }
typetag = { workspace = true }
log-panics = { workspace = true }
thiserror = { workspace = true }
linux-futex = { workspace = true }
libloading = { workspace = true }
image = { workspace = true }
ndarray = { workspace = true }
ort = { workspace = true }
ncnn = { workspace = true }
