[package]
name = "ort"
version = "0.1.0"
edition = "2021"

[dependencies]
ort-sys = { workspace = true }
tracing = { workspace = true }
ndarray = { workspace = true, optional = true }

[dev-dependencies]
image = { workspace = true }

[features]
default = ["ndarray", "xnnpack", "nnapi"]
xnnpack = []
nnapi = []
