[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = "0.13.3"
# git2 = { version = "0.18.3", features=  ["vendored-openssl"]}
jni = "0.21.1"
log = "0.4.21"
# reqwest = { version = "0.12.4", features = ["blocking", "native-tls-vendored"] }
# reqwest = { version = "0.12.4", default-features=false, features = ["blocking", "rustls-tls", "http2","charset"] }
# mlua = { version = "0.9.7", features = ["luau"] }
# mlua = { version = "0.9.7", features = ["luau-jit"] }
# mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
mlua = { version = "0.9.7", features = ["luajit", "vendored"] }

# tracing = "0.1.40"
# tracing-android = "0.2.0"
# tracing-subscriber = "0.3.18"

[patch.crates-io]
# git2 = { path='/home/bilabila/bin/git2-rs' }


[profile.release]
strip = true
opt-level = "s"
lto = true
codegen-units = 1
panic = "abort"

