[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# ort = { version = "2.0.0-rc.6" }
# ort = { path = "/home/bilabila/bin/ort/" }
# ort-sys = { path = "/home/bilabila/bin/ort/ort-sys/" }

android_logger = "0.13.3"
anyhow = "1.0.86"
erased-serde = "0.4.5"
fs_extra = "1.3.0"
# boa_engine = "0.18.0"
# git2 = { version = "0.18.3", features=  ["vendored-openssl"]}
jni = "0.21.1"
log = "0.4.21"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
slotmap = { version = "1.0.7", features = ["serde"] }
strum = { version = "0.26.3", features = ["derive"] }
typetag = "0.2.16"
log-panics = { version = "2", features = ["with-backtrace"] }
static-toml = "1.2.0"
thiserror = "1.0.63"
structx = "0.1.11"
structz = "0.6.0"
linux-futex = "1.0.0"
libloading = "0.8.5"

# wasmtime = "20.0.1"
# rustpython-vm = "0.3.1"
# reqwest = { version = "0.12.4", features = ["blocking", "native-tls-vendored"] }
# reqwest = { version = "0.12.4", default-features=false, features = ["blocking", "rustls-tls", "http2","charset"] }
# mlua = { version = "0.9.7", features = ["luau"] }
# mlua = { version = "0.9.7", features = ["luau-jit"] }
# mlua = { version = "0.9.7", features = ["lua54", "vendored"] }
# mlua = { version = "0.9.7", features = ["luajit", "vendored"] }
# wasmer = { version = "4.2.8" }
# wasmer = { version = "4.2.8", default-features= false, features = ["wasmer-compiler-llvm"] }
# wasmer-compiler-llvm = "4.2.8"

# tracing = "0.1.40"
# tracing-android = "0.2.0"
# tracing-subscriber = "0.3.18"

# [patch.crates-io]
# git2 = { path='/home/bilabila/bin/git2-rs' }


# [profile.release]
# strip = true
# opt-level = "s"
# lto = true
# codegen-units = 1
# panic = "abort"
