[package]
name = "rust"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android_logger = { workspace = true }
anyhow = { workspace = true }
git2 = { workspace = true }
jni = { workspace = true }
log = { workspace = true }
libloading = { workspace = true }
cached-path = { version = "0.6.1", default-features = false, features = [] }
